codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__shortcut_help_hides_visible_sparkles_without_restarting_their_deadline.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
expires during help: false
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                            Session
  /             Commands             tab     Send message
  @             Mention files        ⌥,      Less reasoning
  !             Shell command        ⌥.      More reasoning
  ctrl+j        New line             f4      Inspect activity
  ctrl+v        Paste image          ctrl+c  Quit
  ctrl+g        External editor
  ctrl+r        Search history       Transcript (open first)
  ctrl+z        Undo                 ctrl+t                Open transcript
  ctrl+shift+z  Redo                 f3                    Find text
  esc esc       Edit last message    pgup / pgdn           Scroll
                                     ctrl+space            Start selection
                                     ctrl+home / ctrl+end  Top / latest
                                     shift+⌥, / shift+⌥.   Top / latest

  /keymap customize

› Ask Codex to do anything

  ? / esc close
after closing:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Codex to do anything                                   ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left

expires during help: true
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                            Session
  /             Commands             tab     Send message
  @             Mention files        ⌥,      Less reasoning
  !             Shell command        ⌥.      More reasoning
  ctrl+j        New line             f4      Inspect activity
  ctrl+v        Paste image          ctrl+c  Quit
  ctrl+g        External editor
  ctrl+r        Search history       Transcript (open first)
  ctrl+z        Undo                 ctrl+t                Open transcript
  ctrl+shift+z  Redo                 f3                    Find text
  esc esc       Edit last message    pgup / pgdn           Scroll
                                     ctrl+space            Start selection
                                     ctrl+home / ctrl+end  Top / latest
                                     shift+⌥, / shift+⌥.   Top / latest

  /keymap customize

› Ask Codex to do anything

  ? / esc close
after closing:

› Ask Codex to do anything

  ? for shortcuts                                            100% context left
